--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -47,7 +47,7 @@ jobs:
       uses: github/codeql-action/init@v2
       with:
         languages: ${{ matrix.language }}
-    - uses: actions/setup-java@1.4.4
+    - uses: actions/setup-java@v1.4.4
       name: Setup JDK 7
       with: 
         java-version: 1.7
